working with titles

--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -9,7 +9,7 @@
     </div>
     <div class="info-container">
 
-      <h2 class="book-title">{{book.title}}</h2>
+      <h2 class="book-title">{{title}}</h2>
       <p class="book-description">
         {{book.description}}
       </p>
