save book not books

--- a/public/templates/bsDisplayBooks.html
+++ b/public/templates/bsDisplayBooks.html
@@ -35,9 +35,8 @@
       <p class="username">Thomas Conto</p>
       <img class="user-photo" src="img/user.jpg" />
 
-      <form ng-submit="display.deleteBook(book)">
-      Delete:
-      <input  type="submit" value="Submit">
+      <form ng-submit="display.deleteBook(book)" class="delete-book-btn">
+      <input  type="submit" value="Delete">
       </form>
     </div>
   </div>
