--- a/public/style/main.css
+++ b/public/style/main.css
@@ -131,7 +131,7 @@
 
 
 .info-container ul {
-  margin-top: 6.5%;
+  margin-top: 20%;
 }
 
 .info-container ul li {
@@ -152,3 +152,6 @@
 }
 
 
+.delete-book-btn {
+  margin: 1% 0 0 4%;
+}
