--- a/public/style/home.style.css
+++ b/public/style/home.style.css
@@ -9,21 +9,33 @@
   color: #333333;
   font-size: 48px;
   font-weight: bold;
+  height: 50vh;
   margin: 0 auto;
   padding: 10vh 0;
   text-align: center;
   width: 75%;
 }
 
-.log-in-btn {
-  background: #ffffff;
-  color: #333333;
+.log-in-btn, .sign-up-btn {
+  background: #2c2c2c;
+  color: #ffffff;
   float: right;
+  font-size: 16px;
   font-weight: 700;
   padding: 16px;
-  margin-top: 5vh;
+  margin-top: 10vh;
   margin-right: 12.5%;
   text-align: center;
   text-decoration: none;
+  transition: .4s background linear;
   width: 15%;
+
+}
+
+.sign-up-btn {
+  margin-right: 7.5%;
+}
+
+.log-in-btn:hover, .sign-up-btn:hover {
+  background: #363A3B;
 }
