--- a/public/style/displayBooks.style.css
+++ b/public/style/displayBooks.style.css
@@ -137,3 +137,20 @@
   font-weight: 700;
   text-align: center;
 }
+
+.modal-container {
+  width: 80%;
+  height: 80vh;
+  background: green;
+  position: fixed;
+  z-index: 1;
+  top: 10vh;
+  left: 10%;
+}
+
+.modal-data-row {
+  width: 100%;
+  height: 20%;
+  background: #2c2c2c;
+}
+
