--- a/public/style/home.style.css
+++ b/public/style/home.style.css
@@ -16,6 +16,10 @@
   width: 75%;
 }
 
+.home-title-section h1 {
+  text-align: center;
+}
+
 .log-in-btn, .sign-up-btn {
   background: #2c2c2c;
   color: #ffffff;
