--- a/public/style/displayBooks.style.css
+++ b/public/style/displayBooks.style.css
@@ -138,19 +138,37 @@
   text-align: center;
 }
 
+
+/*********************
+Modal Style
+**********************/
+
 .modal-container {
-  width: 80%;
-  height: 80vh;
-  background: green;
-  position: fixed;
-  z-index: 1;
-  top: 10vh;
-  left: 10%;
-}
-
-.modal-data-row {
+  background: #fefefe;
+  height: 90vh;
+  padding: 5%;
   width: 100%;
-  height: 20%;
-  background: #2c2c2c;
 }
 
+.modal-book {
+  border: 1px solid #ddd;
+  float: left;
+  height: 20%;
+  padding: 1% 2% 1% 1%;
+  width: 50%;
+}
+
+.modal-container a {
+  text-decoration: none;
+  color: #333;
+}
+
+.modal-container img {
+  float: right;
+}
+
+
+
+/*********************
+End Modal Style
+**********************/
