--- a/public/style/main.css
+++ b/public/style/main.css
@@ -2,17 +2,16 @@ body {
   background: #f9fbf0;
 }
 
-
 .vert-book-container {
   background: #fffffe;
   width: 68%;
   font-family: 'Prompt', sans-serif;
-  margin: 0% 4.5%;
-  padding: 1% 0;
+  margin: 0 4.5%;
+  padding: 0 0 1% 0;
   float: left;
 }
 
-.vert-book:nth-child(6n + 2) {
+.vert-book:nth-child(6n + 1) {
   margin-left: 4%;
 }
 
@@ -53,12 +52,13 @@ body {
   font-size: 11px;
 }
 
-
-
 .book-search-box {
   background: #f9fbf0;
   border: none;
   width: 50%;
+  margin: 20px 0 15px 0;
+  height: 36px;
+  padding: 0 1%;
 }
 
 .book-search-submit {
@@ -66,6 +66,7 @@ body {
   border: none;
   margin-left: -5px;
   padding: 5px;
+  height: 36px;
 }
 
 input:-webkit-autofill {
