--- a/public/style/main.css
+++ b/public/style/main.css
@@ -59,6 +59,8 @@ body {
   margin: 20px 0 15px 0;
   height: 36px;
   padding: 0 1%;
+  font-size: 12px;
+  font-weight: 400;
 }
 
 .book-search-submit {
@@ -71,4 +73,30 @@ body {
 
 input:-webkit-autofill {
   background-color: #f9fbf0;
+}
+
+.divider {
+  width: 100%;
+  height: 15px;
+}
+
+
+/*******************
+  Sidebar Styles
+*******************/
+
+.sidebar-container {
+  width: 23%;
+  height: auto;
+  background: #ddd;
+  float: left;
+}
+
+
+.menu {
+  float: right;
+  background: linear-gradient(to bottom, #000 0, #000 25%, transparent 25%, transparent 37.5%, #000 37.5%, #000 62.5%, transparent 62.5%, transparent 75%, #000 75%);
+  height: 30px;
+  width: 40px;
+  cursor: pointer;
 }
