--- a/public/style/nav.style.css
+++ b/public/style/nav.style.css
@@ -1,5 +1,5 @@
 .header {
-  padding: 15px 0 30px 0;
+  padding: 1px 0 30px 0;
   width: 100%;
   background: #f9fbf0;
 }
@@ -22,6 +22,7 @@
 .header ul li a{
   color: #555555;
   text-decoration: none;
+  font-size: 12px;
 }
 
 .nav-login {
@@ -29,3 +30,16 @@
   margin-right: 10px;
 }
 
+.nav-logo {
+  float: left;
+  font-weight: 700;
+  margin-top: 12px;
+  font-size: 16px;
+  margin-left: 4%;
+  color: #333;
+  cursor: pointer;
+}
+
+.nav-logo:hover {
+  color: #333;
+}
