--- a/public/style/main.css
+++ b/public/style/main.css
@@ -75,11 +75,17 @@ input:-webkit-autofill {
   background-color: #f9fbf0;
 }
 
-.divider {
+.section-divider {
   width: 100%;
   height: 15px;
 }
 
+
+.top-section-spacer {
+  width: 100%;
+  height: 50px;
+  float: left;
+}
 
 /*******************
   Sidebar Styles
