--- a/public/style/home.style.css
+++ b/public/style/home.style.css
@@ -1,5 +1,5 @@
 .home-body {
-  background: #f1f5f6;
+  background: #f9fbf0;
   height: calc(90vh - 45px);
   padding: 10vh 0 0 0;
 }
@@ -11,12 +11,13 @@
   font-weight: bold;
   height: 50vh;
   margin: 0 auto;
-  padding: 10vh 0;
+  /*padding: 10vh 0;*/
   text-align: center;
   width: 75%;
 }
 
 .home-title-section h1 {
+  margin-top: 75px;
   text-align: center;
 }
 
