--- a/public/style/nav.style.css
+++ b/public/style/nav.style.css
@@ -60,7 +60,8 @@
 .menu {
   float: right;
   background: linear-gradient(to bottom, #4e554f 0, #4e554f 25%, transparent 25%, transparent 37.5%, #4e554f 37.5%, #4e554f 62.5%, transparent 62.5%, transparent 75%, #4e554f 75%);
-  height: 30px;
-  width: 40px;
+  height: 20px;
+  width: 30px;
   cursor: pointer;
+  margin-top: 8px;
 }
