--- a/public/style/main.css
+++ b/public/style/main.css
@@ -6,7 +6,7 @@ body {
   background: #fffffe;
   width: 68%;
   font-family: 'Prompt', sans-serif;
-  margin: 0 4.5%;
+  margin: 0 .5% 0 4.5%;
   padding: 0 0 1% 0;
   float: left;
 }
@@ -84,4 +84,51 @@ input:-webkit-autofill {
   width: 100%;
   height: 50px;
   float: left;
+}
+
+
+
+
+/**********************
+  Monthly Books Styles
+***********************/
+
+
+.monthly-books-container {
+  width: 100%;
+  background: #fff;
+  height: 270px;
+  margin-top: 40px;
+}
+
+.monthly-books-header {
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 20px;
+}
+
+.monthly-books-container hr {
+  width: 70%;
+  margin-top: 0;
+}
+
+.monthly-books-number {
+  font-size: 32px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.monthly-books-subhead {
+  text-align: center;
+  padding-top: 5px;
+}
+
+.monthly-books-btn {
+  width: 80%;
+  padding: 15px 0;
+  text-align: center;
+  margin: 20px auto 0 auto;
+  background: #c5c5c5;
+  color: #fff;
+  font-size: 11px;
 }
