working on modularizing

--- a/public/app/components/num-users/bsNumUsers.html
+++ b/public/app/components/num-users/bsNumUsers.html
@@ -3,7 +3,7 @@
   <p class="monthly-books-header">Your Activity</p>
   <hr />
 
-  <p class="monthly-books-number">{{monthlyBooks.booksThisMonth}}</p>
+  <p class="monthly-books-number">{{numUsers.booksThisMonth}}</p>
   <p class="monthly-books-subhead">Books added this month.</p>
 
   <div class="monthly-books-btn">Add Books</div>
