--- a/public/style/nav.style.css
+++ b/public/style/nav.style.css
@@ -14,7 +14,7 @@
   width: 16%;
   line-height: 40px;
   height: 40px;
-  background: #fff;
+  /*background: #fff;*/
   text-align: center;
 }
 
@@ -42,6 +42,11 @@
 
 .nav-logo:hover {
   color: #333;
+}
+
+
+.currentPage {
+  background: #fff;
 }
 
 
