--- a/public/app/components/num-users/bsNumUsers.html
+++ b/public/app/components/num-users/bsNumUsers.html
@@ -1,10 +1,10 @@
-<div class="monthly-books-container">
+<div class="number-users-container">
 
-  <p class="monthly-books-header">Your Activity</p>
+  <p class="number-users-header">Group Activity</p>
   <hr />
 
-  <p class="monthly-books-number">{{numUsers.booksThisMonth}}</p>
-  <p class="monthly-books-subhead">Books added this month.</p>
+  <p class="number-users-number">{{numUsers.totalUsers}}</p>
+  <p class="number-users-subhead">Number of group members.</p>
 
-  <div class="monthly-books-btn">Add Books</div>
+  <div class="number-users-btn">Invite Members</div>
 </div>
