--- a/public/style/main.css
+++ b/public/style/main.css
@@ -66,12 +66,9 @@ body {
   margin-bottom: 9px;
   position: relative;
   opacity: 0;
-  transition: opacity .3s linear;
-  -webkit-transition-delay: .2s;
-  -moz-transition-delay: .2s;
-  -ms-transition-delay: .2s;
-  -o-transition-delay: .2s;
-  transition-delay: .2s;
+  transition: opacity .6s cubic-bezier(0.35, 1.68, 1, 1);
+  -webkit-transition-delay: .15s;
+  transition-delay: .15s;
 }
 
 .vert-book-img:hover + .book-hover,
@@ -79,14 +76,33 @@ body {
   opacity: 1;
 }
 
-/*.book-hover:hover {*/
-  /*width: 100%;*/
-  /*height: 180px;*/
-  /*background: #333;*/
-  /*margin-top: -183px;*/
-  /*position: relative;*/
-  /*display: inherit;*/
-/*}*/
+.book-hover .fa-times-circle,
+.book-hover .fa-bars {
+  color: #fff;
+  margin: 10px;
+  opacity: 0;
+  cursor: pointer;
+  transition: opacity 1.5s cubic-bezier(0.35, 1.68, 1, 1);
+  -webkit-transition-delay: .5s;
+  transition-delay: .4s;
+}
+
+.book-hover .fa-times-circle {
+  font-size: 25px;
+  float: right;
+}
+
+.book-hover .fa-bars {
+  font-size: 20px;
+  float: left;
+}
+
+
+.book-hover:hover .fa-bars,
+.book-hover:hover .fa-times-circle {
+  opacity: 1;
+}
+
 
 /***************************
   End Vertical Book Styles
