--- a/public/style/nav.style.css
+++ b/public/style/nav.style.css
@@ -20,7 +20,7 @@
 
 
 .header ul li a{
-  color: #555555;
+  color: #4c554f;
   text-decoration: none;
   font-size: 12px;
 }
@@ -36,12 +36,12 @@
   margin-top: 12px;
   font-size: 16px;
   margin-left: 4%;
-  color: #333;
+  color: #4c554f;
   cursor: pointer;
 }
 
 .nav-logo:hover {
-  color: #333;
+  color: #4c554f;
 }
 
 
@@ -70,4 +70,13 @@
   cursor: pointer;
   margin-top: 8px;
   margin-bottom: 3px;
+}
+
+.dropdown-menu>li>a {
+  color: #4c554f;
+  font-size: 12px;
+}
+
+.dropdown-menu>li>a:hover {
+  background: #f9fbf0;
 }
