--- a/public/style/home.style.css
+++ b/public/style/home.style.css
@@ -1,25 +1,19 @@
-.home-body {
+.home-bg {
   background: #f9fbf0;
-  height: calc(90vh - 45px);
-  padding: 10vh 0 0 0;
 }
 
-.home-title-section {
+.home-container {
   background: #ffffff;
   color: #333333;
-  font-size: 48px;
   font-weight: bold;
-  height: 50vh;
+  height: calc(84vh - 40px);
   margin: 0 auto;
-  /*padding: 10vh 0;*/
+  padding: 20px 5%;
   text-align: center;
-  width: 75%;
+  width: 90%;
+
 }
 
-.home-title-section h1 {
-  margin-top: 75px;
-  text-align: center;
-}
 
 .log-in-btn, .sign-up-btn {
   background: #2c2c2c;
@@ -44,3 +38,36 @@
 .log-in-btn:hover, .sign-up-btn:hover {
   background: #363A3B;
 }
+
+
+
+/*Navigation Styling*/
+.home-nav {
+  width: 100%;
+  height: 10vh;
+  background: #fff;
+  line-height: 10vh;
+  font-family: 'Prompt', sans-serif;
+  margin: 0 0 6vh 0;
+}
+
+.home-nav .home-nav-logo {
+  font-size: 32px;
+  font-weight: 700;
+  display: inline-block;
+  margin: 0 0 0 5%;
+  color: #4e554f;
+}
+
+.home-nav .home-nav-logo:hover {
+  text-decoration: none;
+  color: #444;
+}
+
+
+.home-nav .home-sign-in {
+  float: right;
+  margin: 0 5% 0 0;
+  color: #4e554f;
+}
+/*End Navigation Styling*/
