--- a/public/style/home.style.css
+++ b/public/style/home.style.css
@@ -41,7 +41,7 @@
   font-weight: bold;
   height: calc(84vh - 40px);
   margin: 0 auto;
-  padding: 20px 5%;
+  padding: 40px 5% 0 5%;
   width: 90%;
 }
 
@@ -62,6 +62,11 @@
   margin: 10px 0 40px 0;
   font-size: 14px;
   font-weight: 400;
+}
+
+.home-container img {
+  float: left;
+  width: 50%;
 }
 
 
