--- a/public/style/main.css
+++ b/public/style/main.css
@@ -265,3 +265,45 @@ h4.sort {
   End Registration
 *******************/
 
+
+/***************
+  Log In
+****************/
+
+/*.login-input-box {*/
+  /*margin: 10px 0;*/
+/*}*/
+
+
+/*.login-input-box input {*/
+  /*font-weight: 400;*/
+  /*padding: 8px 0 8px 1%;*/
+  /*width: 90%;*/
+/*}*/
+
+/*.login-submit-button {*/
+  /*width: 90%;*/
+  /*padding: 12px 0;*/
+  /*background: #c5c5c5;*/
+  /*color: #fff;*/
+  /*border: none;*/
+  /*font-size: 14px;*/
+  /*font-weight: 400;*/
+/*}*/
+
+.login-container {
+  margin: 0 auto;
+  padding: 10%;
+}
+
+.login-container p {
+  margin-bottom: 20px;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+/******************
+  End Log In
+*******************/
+
+
