--- a/public/style/displayBooks.style.css
+++ b/public/style/displayBooks.style.css
@@ -146,26 +146,53 @@ Modal Style
 .modal-container {
   background: #fefefe;
   height: 90vh;
-  padding: 5%;
+  padding: 3% 3% 0% 3%;
   width: 100%;
 }
 
-.modal-book {
-  border: 1px solid #ddd;
-  float: left;
-  height: 20%;
-  padding: 1% 2% 1% 1%;
-  width: 50%;
-}
-
 .modal-container a {
-  color: #333;
-  text-decoration: none;
+  color: #4c554f;
 }
 
-.modal-container img {
-  float: right;
+.modal-book {
+  background: #ececec;
+  float: left;
+  margin: 1.5% 1%;
+  min-height: 200px;
+  width: 18%;
+  height: 45%;
 }
+
+.modal-book-img {
+  border: 1px solid #555;
+  max-height: 180px;
+  min-height: 180px;
+  width: 100%;
+}
+
+.modal-book-title {
+  font-weight: 700;
+  font-size: 13px;
+  height: 26px;
+  margin-left: 2%;
+  margin-top: 6px;
+  overflow: hidden;
+}
+
+.modal-book-author {
+  font-size: 12px;
+  margin-left: 2%;
+  margin-top: 6px;
+}
+
+.modal-book-owner {
+  font-size: 11px;
+  height: 25px;
+  margin-bottom: 6px;
+  margin-left: 2%;
+  margin-top: 6px;
+}
+
 
 /*********************
 End Modal Style
